<resources>
    <string name="app_name">SmartSchool</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="askPassword">Forgot your password? Forgot Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="email">Email</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="schedule">Schedule</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Contact Admin</string>
</resources>