<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment"
    android:background="@drawable/bar"
    android:paddingTop="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

<!--    <Button-->
<!--        android:id="@+id/btnBack"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="25dp"-->
<!--        android:background="@drawable/union_6"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"/>-->

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_launcher"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/img_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_info_24"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>

        <Button
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_about"
            android:text="@string/about"
            android:background="@color/transparent"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/first"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/img_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_comment_24"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>

        <Button
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_feedback"
            android:text="@string/feedback"
            android:background="@color/transparent"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/second"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/img_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_call_24"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>

        <Button
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/contact"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:background="@color/transparent"
            app:layout_constraintLeft_toRightOf="@+id/img_contact"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>